--- a/resty/package.json
+++ b/resty/package.json
@@ -6,12 +6,13 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
-    "node-sass": "^5.0.0",
+    "node-sass": "^4.14.1",
     "pretty-print-json": "^0.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-if": "^4.0.1",
     "react-scripts": "4.0.0",
+    "superagent": "^6.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
